profiling-using-exp-runner/backup_FINAL_RESULTS/uniquepaths_experiment_2/run_8_repetition_0/energibridge.log
sampling interval: 200, target function: unique_paths_lru_cache, input size: 9
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.uniquepaths as module; up = UniquePaths(); up.unique_paths_lru_cache(9,9); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.442546871185302 for 0.23354988 sec of execution.
